# MonitorCtrl

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  imgui.ini  run.bat
Scripts/: build.bat  run.bat
Theme/: colors.cpp  colors.h
src/: App.cpp  App.h  main.cpp
src/App/: App.cpp  App.h  renderUI.cpp
src/App/PasswordGenerator/: PasswordGenerator.cpp  PasswordGenerator.h
src/App/Theme/: colors.cpp  colors.h  style.cpp  style.h
src/GUI/: AdvancedTab.cpp  ControlsTab.cpp  GUI.cpp  GUI.h  InfoTab.cpp  TitleBar.cpp
src/MonitorControl/: MonitorCtrl.cpp  MonitorCtrl.h  MonitorSpecs.h  Util.cpp  Util.h
